fixing widget miss-alignment in larger screen sizes

--- a/src/styling/terminal.css
+++ b/src/styling/terminal.css
@@ -66,7 +66,7 @@ body {
   img.iconSocial {
     min-width: 15px;
     width: 2em;
-    padding-left: 1vw;
+    padding-left: 10px;
     padding-top: 0.5vw;
   }
 
